Fix images overflowing 100% width in Firefox

--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -347,11 +347,8 @@
 		}
 		
 		.display-data-inner {
-			display: inline-block;
+			display: block;
 			position: relative;
-			&.display-data-inner-full-width {
-				display: block;
-			}
 		}
 		
 		.display-data, .file-modified, .file-modified-image {
